# internal/disease_monitor/model_region.go
@@ -1,0 +1,24 @@
+/*
+ * Disease Monitor Api
+ *
+ * Disease Monitor management for Web-In-Cloud system
+ *
+ * API version: 1.0.0
+ * Contact: xsmoleniak@stuba.sk
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package disease_monitor
+
+type Region struct {
+
+	// Unique identifier of the region
+	Id string `json:"id"`
+
+	// Human readable display name of the region
+	Name string `json:"name"`
+
+	DiseaseCases []DiseaseCaseEntry `json:"diseaseCases,omitempty"`
+
+	PredefinedDiseases []Disease `json:"predefinedDiseases,omitempty"`
+}
